<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textDolares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageCambiar"
        android:layout_marginStart="62dp"
        android:layout_marginTop="25dp"
        android:labelFor="@id/editDolares"
        android:text="@string/dolares" />

    <EditText
        android:id="@+id/editDolares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textDolares"
        android:layout_below="@+id/textDolares"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number" tools:targetApi="o"/>

    <TextView
        android:id="@+id/textEuros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editDolares"
        android:layout_below="@+id/editDolares"
        android:layout_marginTop="25dp"
        android:labelFor="@id/editEuros"
        android:text="@string/euros" />

    <EditText
        android:id="@+id/editEuros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textEuros"
        android:layout_below="@+id/textEuros"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number" tools:targetApi="o"/>

    <TextView
        android:id="@+id/textValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editEuros"
        android:layout_below="@+id/editEuros"
        android:layout_marginTop="30dp"
        android:text="@string/valor_de_convercion" />

    <TextView
        android:id="@+id/dolarValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textValor"
        android:layout_below="@+id/textValor"
        android:layout_marginTop="20dp"
        android:text="@string/us_1" />

    <TextView
        android:id="@+id/euroValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_below="@+id/textValor"
        android:layout_marginTop="20dp"
        android:text="@string/_1_10" />

    <Button
        android:id="@+id/buttonCambiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/euroValor"
        android:layout_below="@+id/textValor"
        android:layout_marginTop="12dp"
        android:text="@string/cambiar_valor" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dolarValor"
        android:layout_below="@+id/buttonCambiar"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radioEuros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convertir_a_euros" />

        <RadioButton
            android:id="@+id/radioDolar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convertir_a_dolar" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:text="@string/convertir" />

    <ImageView
        android:id="@+id/imageCambiar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/icono"
        app:srcCompat="@mipmap/intercambiar" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/imageCambiar"
        android:layout_marginEnd="0dp"
        android:background="#FFC107"
        android:gravity="center"
        android:text="@string/conversor_de_moneda"
        android:textSize="30sp"
        app:autoSizeTextType="none" />


</RelativeLayout>